<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_buyprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_tvbuy_text"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_buyprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:ems="10"
            android:hint="@string/setting_hinttext_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_sailprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_tvsale_text"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_saleprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:ems="10"
            android:hint="@string/setting_hinttext_price"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_tvupdate_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="92dp"
            android:ems="15"
            android:hint="@string/setting_hinttext_update"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/cb_start_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:checked="true"
            android:text="@string/setting_notify_service" >
        </CheckBox>

        <CheckBox
            android:id="@+id/cb_receive_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:checked="true"
            android:text="@string/setting_notify_msg" >
        </CheckBox>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="50dp"
        android:text="@string/setting_btn_save" />

</LinearLayout>